--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="form-horizontal">
 	  <div class="form-group">
 	    <div class="col-sm-12">
-	      <input class="form-control" id="slider" data-slider-id="ex1Slider" type="text" data-slider-min="0" data-slider-max="30" data-slider-step="1" data-slider-value="14"/>
+	      <input class="form-control" id="slider" data-slider-id="ex1Slider" type="text"/>
 	    </div>
 	  </div>
 	</div>
