--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <ul class="nav navbar-nav">
 	    <li><button id="reset-button" type="button" class="btn btn-danger navbar-btn">Reset</button></li>
           </ul>
-	  <p class="navbar-text"><span id="total-possibilities">3,628,800</span> possibilities remain</p> 
+	  <p class="navbar-text"><span id="total-possibilities">3,628,800</span> <span id="total-possibilities-plural">possibilities remain</span><span id="total-possibilities-singular">possibility remains</span></p>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
